# fere

./: Cargo.toml  LICENSE  README.md  clippy.toml
common/: Cargo.toml  README.md
common/src/: camera.rs  geo.rs  lib.rs  light.rs  ori.rs  vec.rs
core/: Cargo.toml
core/shaders/: config.yaml
core/shaders/debug/: fdebug_depth.glsl  fdebug_iden.glsl  fdebug_shadow.glsl
core/shaders/deferred/: fdr3.glsl
core/shaders/effects/: foutline.glsl  voutline.glsl
core/shaders/effects/GI/: fprobe.glsl  fsh_visualize.glsl
core/shaders/effects/geo/: vgeo.glsl
core/shaders/legacy/: fmark.glsl  vocclusion.glsl  vrsm.glsl  vshrender.glsl
core/shaders/primitive/: fbasic.glsl  vimage.glsl
core/shaders/standard/: fstandard_probe.glsl  fstandard_tex.glsl  vstandard.glsl
core/src/: lib.rs
core/src/graphics/: graphics.rs  mod.rs  render_unit.rs  resources.rs
core/src/graphics/gi/: probe_volume.rs
core/src/graphics/glmanager/: compile.rs  mod.rs  shader.rs
core/src/graphics/graphics/: draw.rs  material.rs  pass.rs  prgs.rs  probe.rs  texture_internal.rs
examples/: Cargo.toml
examples/examples/: basic_fere_configs.yml  gravity.rs  grid.rs  massive.rs  scene1.rs  scene1.yml  scene2.rs  scene2.yml  texture.rs  video.rs  window_config.yml
examples/src/: lib.rs
fere/: Cargo.toml
fere/shaders/: config.yaml
fere/shaders/debug/: fdebug_3vec.glsl  ftest.glsl  vdebug_basic.glsl
fere/shaders/deferred/: fdr1.glsl  fdr2.glsl  fdr2_ambient.glsl  fdr2_cartoon.glsl  fdr2_irradiance.glsl  fdr2_omni.glsl  fyuv.glsl  vdr1.glsl
fere/shaders/effects/: foutline_mark.glsl  read.txt  voutline_mark.glsl
fere/shaders/effects/GI/: fsh_visualize_single.glsl  vprobe.glsl
fere/shaders/effects/geo/: fgeo.glsl
fere/shaders/legacy/: fmirror.glsl  focclusion.glsl  frsm.glsl  fshadow.glsl  fshadow_go.glsl  fshmap.glsl  fshrender.glsl  vrsm_render.glsl  vrsm_render_go.glsl  vsubtex.glsl
fere/shaders/primitive/: fimage.glsl  fsimple.glsl  ftex.glsl  vbasic.glsl
fere/shaders/probe/: fprobe.glsl
fere/shaders/shadow/: fdepth_only.glsl
fere/shaders/standard/: vstandard_ge.glsl
fere/src/: configs.rs  frame.rs  lib.rs  ops.rs  video_record.rs
fere/src/graphics/: graphics.rs  mod.rs  resources.rs
fere/src/graphics/gi/: mod.rs  probe_volume.rs
fere/src/graphics/gi/probe_volume/: calculation.rs  suite.rs
fere/src/graphics/glmanager/: light.rs  mod.rs  shader.rs
fere/src/graphics/graphics/: material.rs  pass.rs  prgs.rs  read_buffer.rs  texture_internal.rs
fere/src/renderer/: chamber.rs  common.rs  images.rs  mod.rs  probe.rs  render.rs  shading.rs
fere/src/resources/: mesh.rs  mod.rs  texture.rs
resources/: Cargo.toml  README.md
resources/src/: lib.rs  mesh.rs  surface.rs  texture.rs
resources/src/mesh/: obj.rs
util/: Cargo.toml
util/src/: ui.rs
util/src/ui/: camera_control.rs  input_manager.rs  keys.rs
window/: Cargo.toml
window/src/: gl_state.rs  imgui_renderer.rs  lib.rs
