[package]
name = "fere-common"
version = "0.0.0"
authors = ["Junha Yang <junhayang1@gmail.com>"]
edition = '2018'

[dependencies]
nalgebra = { version = "0.26", features = ["serde-serialize"]}
glm = { package = "nalgebra-glm", version = "0.12", features = ["serde-serialize"]}
serde = { version = "1.0", features = ["derive"]}
thiserror = "1.0"
once_cell = "1.3.1"
ncollide2d = { version = "0.29.0" }
ncollide3d = { version = "0.29.0" }