[package]
name = "fere-examples"
version = "0.0.0"
authors = ["Junha Yang <junhayang1@gmail.com>"]
edition = '2018'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
fere = { path = "../fere" }
fere-window = { path = "../window" }
log = "0.4"
chrono = "0.4"
rand = "0.8"
parking_lot = "0.11"
crossbeam = "0.8"
