[package]
name = "fere"
version = "0.0.0"
authors = ["Junha Yang <junhayang1@gmail.com>"]
edition = '2018'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
fere-common = { path = "../common" }
fere-resources = { path = "../resources" }
thiserror = "1.0"
log = "0.4"
chrono = "0.4"
rand = "0.8"
parking_lot = "0.11"
crossbeam = "0.8"