[package]
name = "fere"
version = "0.0.0"
authors = ["Junha Yang <junhayang1@gmail.com>"]
edition = '2018'
include = ["src/**/*", "Cargo.toml", "shaders/**/*"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
fere-common = { path = "../common" }
fere-resources = { path = "../resources" }
thiserror = "1.0"
log = "0.4"
chrono = "0.4"
rand = "0.8"
parking_lot = "0.11"
crossbeam = "0.8"
gl = "0.14.0"
strum = "0.18.0"
strum_macros = "0.18.0"
heck = "0.3.1"
serde_json = "1"