[package]
name = "fere"
version = "0.0.0"
authors = ["Junha Yang <junhayang1@gmail.com>"]
edition = '2018'
include = ["src/**/*", "Cargo.toml", "shaders/**/*", "resources/**/*"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rsbm/fere"
description = """
A 3D rendering engine focused on simple use and realtime global illumination.
"""
categories = ["graphics", "rendering"]
keywords = ["game", "graphics", "rendering", "fere"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
fere-common = { path = "../common" }
fere-resources = { path = "../resources" }
thiserror = "1.0"
log = "0.4"
chrono = "0.4"
rand = "0.8"
parking_lot = "0.11"
crossbeam = "0.8"
gl = "0.14.0"
strum = "0.18.0"
strum_macros = "0.18.0"
heck = "0.3.1"
serde_json = "1"
y4m = "0.7.0"
include_dir = "0.6"

[features]
include_resources_and_shaders = []