[package]
name = "fere-resources"
version = "0.0.0"
authors = ["Junha Yang <junhayang1@gmail.com>"]
edition = '2018'
license = "MIT"
readme = "README.md"
repository = "https://github.com/rsbm/fere"
description = """
Various graphical resources for Fere.
"""
categories = ["graphics", "rendering", "multimedia"]
keywords = ["game", "graphics", "rendering", "fere"]

[dependencies]
fere-common = { version = "0.0.0", path = "../common" }
gl = "0.14.0"
image = "0.23"
serde = "1.0"